--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel ='homework' href='js/main.js'>
   <title>Кекстаграм</title>
 </head>
 
@@ -234,4 +233,5 @@
   </template>
 
 </body>
+<script src ='js/main.js'></script>
 </html>
